# technology-discovery

./: README.md  bom.json  leanix.yaml  leanix_assistant.py  pyproject.toml  sbom.json  setup.py
.github/workflows/: manifestfile.yaml
